' Generated by UML Generator
' Encoded: bP8zRm8n38Rt_0gFXz0XkZ8WJktIeHCZOZ0vwx1wSTh4rm7AVsz2xb3L3gLBvA_dTM9d4nM33gutyPNb3GCwi3t6sAW6FWnApzRBbay4ItFabi1oi3qPSws2HjXX3sS3K0iwMi4sST9blqx7l1HKttEp75TVd6fsGowJw0kwINHUxF_nZwW5JiPliWj46ZFtuRdzI-l9TqKh6VTeZH4KhqSA2LfbYJkRlGyKbRqyDANdEMr7sLx08Kk5eOiJizjFaWaUvrNNd-jn8IQFuEgNdCdF-Eal5kjyDxCXQTCF-08
' URL: http://www.plantuml.com/plantuml/uml/bP8zRm8n38Rt_0gFXz0XkZ8WJktIeHCZOZ0vwx1wSTh4rm7AVsz2xb3L3gLBvA_dTM9d4nM33gutyPNb3GCwi3t6sAW6FWnApzRBbay4ItFabi1oi3qPSws2HjXX3sS3K0iwMi4sST9blqx7l1HKttEp75TVd6fsGowJw0kwINHUxF_nZwW5JiPliWj46ZFtuRdzI-l9TqKh6VTeZH4KhqSA2LfbYJkRlGyKbRqyDANdEMr7sLx08Kk5eOiJizjFaWaUvrNNd-jn8IQFuEgNdCdF-Eal5kjyDxCXQTCF-08
' Generated on: 2025-11-02T15:26:37.498589100

@startuml
skinparam classAttributeIconSize 0
hide circle

class Animal {
  -name: String
  --
  +Animal(name: String)
  +toString(): String
}

class Mammal {
  +Mammal(name: String)
  +toString(): String
}

class Cat {
  +Cat(name: String)
  +greets(): void
  +toString(): String
}

class Dog {
  +Dog(name: String)
  +greets(): void
  +greets(anotherDog: Dog): void
  +toString(): String
}

class question1A {
  +{static} main(args: String[]): void
}

Mammal --|> Animal
Cat --|> Mammal
Dog --|> Mammal
Dog ..> Dog
@enduml